--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,28 @@ body {
   padding: 0;
 }
 
+.marker {
+  width: 64px; 
+  height: 64px;
+  border-radius: 50%;
+  cursor: pointer;
+  display: block;
+  border: 0.5em solid transparent; 
+  box-shadow: 0 0 0 0.5em rgba(0, 0, 0, 0);
+}
+
+.marker::before {
+  content: "";
+  width: 12px; 
+  height: 12px;
+  border-radius: 50%;
+  background-color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+}
+
 .custom-popup .mapboxgl-popup-content {
   width: 300px; 
   max-width: 100%;
